<resources>
    <string name="app_name">Home Pharmacy</string>
    <string name="BillNo">Bill No</string>
    <string name="EnterBillNo">Enter Bill No</string>
    <string name="MobileNo">Mobile No</string>
    <string name="EnterMobile">Enter Mobile No</string>
    <string name="FindResult">Find Result</string>
    <string name="Download">Download</string>
    <string name="ImageView">Image View</string>
    <string name="ReportHandle">Report Handling</string>
    <string name="Save">Save Image</string>
    <string name="Insert">Insert</string>
    <string name="Delete">Delete</string>
    <string name="your_report">Your Report</string>
    <string name="Add">Add</string>
    <string name="title_activity_report_card">ReportCard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="billnumber">Bill No : 100324</string>
    <string name="phone">Mobile No : 0762222222</string>
    <string name="billnumber2">Bill No : 100342</string>
    <string name="phone2">Mobile No :0773456754</string>
</resources>